<resources>
    <string name="app_name">Hoteles</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="msg_fallo_registro">No se pudo registrar de usuario</string>
    <string name="msg_fallo_login">No se pudo autenticar del usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_hotel">Hoteles</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del hotel</string>
    <string name="msg_email">Correo (correodelhotel@xxxx.xxx)</string>
    <string name="msg_telefono">Telefono (0000-0000)</string>
    <string name="msg_direccion">Ubicacion del hotel</string>
    <string name="bt_addHotel">Registrar</string>
    <string name="msg_hotel_added">Hotel registrado</string>
    <string name="msg_data">Falta informacion</string>


</resources>