<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_hotel">

    <fragment
        android:id="@+id/nav_hotel"
        android:name="com.hoteles.ui.Hotel.HotelFragment"
        android:label="@string/menu_hotel"
        tools:layout="@layout/fragment_hotel" >
        <action
            android:id="@+id/action_nav_hotel_to_addHotelFragment"
            app:destination="@id/addHotelFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.hoteles.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.hoteles.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addHotelFragment"
        android:name="com.hoteles.ui.Hotel.AddHotelFragment"
        android:label="fragment_add_hotel"
        tools:layout="@layout/fragment_add_hotel" >
        <action
            android:id="@+id/action_addHotelFragment_to_nav_hotel"
            app:destination="@id/nav_hotel" />
    </fragment>
</navigation>